--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -17,19 +17,19 @@ BMWPartsHub{% endblock %} {% block extra_css %}
   <div class="container">
     <h2 class="text-center mb-4">Browse By Category</h2>
     <div class="row text-center">
-      <div class="col-md-3 mb-4">
+      <div class="col-6 col-md-3 mb-4">
         <i class="bx bx-cog category-icon"></i>
         <h5>Engine</h5>
       </div>
-      <div class="col-md-3 mb-4">
+      <div class="col-6 col-md-3 mb-4">
         <i class="bx bx-car category-icon"></i>
         <h5>Suspension</h5>
       </div>
-      <div class="col-md-3 mb-4">
+      <div class="col-6 col-md-3 mb-4">
         <i class="bx bx-disc category-icon"></i>
         <h5>Brakes</h5>
       </div>
-      <div class="col-md-3 mb-4">
+      <div class="col-6 col-md-3 mb-4">
         <i class="bx bx-tachometer category-icon"></i>
         <h5>Interior</h5>
       </div>
